<resources>
    <string name="app_name">PoemasGt</string>

    <string name="r01" >
Ni el tiempo que al pasar me repetía\n
que no tendría fin mi desventura\n
será capaz con su palabra obscura\n
de resistir la luz de mi alegría,\n
\n\
ni el espacio que un día y otro día\n
convertía distancia en amargura\n
me apartará de la persona pura\n
que se confunde con mi poesía.\n
\n\
Porque para el Amor que se prolonga\n
por encima de cada sepultura\n
no existe tiempo donde el sol se ponga.\n
\n\
Porque para el Amor omnipotente,\n
que todo lo transforma y transfigura,\n
no existe espacio que no esté presente.\n
    </string>

    <string name="r02" >
Si para recobrar lo recobrado\n
debí perder primero lo perdido,\n
si para conseguir lo conseguido\n
tuve que soportar lo soportado,\n
\n\
si para estar ahora enamorado\n
fue menester haber estado herido,\n
tengo por bien sufrido lo sufrido,\n
tengo por bien llorado lo llorado.\n
\n\
Porque después de todo he comprobado\n
que no se goza bien de lo gozado\n
sino después de haberlo padecido.\n
\n\
Porque después de todo he comprendido\n
por lo que el árbol tiene de florido\n
vive de lo que tiene sepultado.\n
    </string>
    <string name="r03" >
A veces tengo ganas de ser un cursi\n
para decir: La amo a usted con locura.\n
A veces tengo ganas de ser tonto\n
para gritar: ¡La quiero tanto!\n
\n\
A veces tengo ganas de ser un niño\n
para llorar acurrucado en su seno.\n
A veces tengo ganas de estar muerto\n
para sentir, bajo la tierra húmeda de mis jugos,\n
que me crece una flor rompiéndome el pecho,\n
una flor, y decir: Esta flor,\n
para usted.\n
    </string>

    <string name="s01" >
 ¿Cuándo fue?\n
No lo sé.\n
Agua del recuerdo\n
voy a navegar.\n
\n\
Pasó una mulata de oro,\n
y yo la miré al pasar:\n
Moño de seda en la nuca,\n
bata de cristal,\n
niña de espalda reciente,\n
tacón de reciente andar.\n
\n\
Caña\n
(febril le dije en mí mismo),\n
caña\n
temblando sobre el abismo,\n
¿quién te empujará?\n
¿Qué cortador con su mocha\n
te cortará?\n
¿Qué ingenio con su trapiche\n
te molerá?\n
\n\
El tiempo corrió después,\n
corrió el tiempo sin cesar,\n
yo para allá, para aquí,\n
yo para aquí, para allá,\n
para allá, para aquí,\n
para aquí, para allá. . .\n
\n\
Nada sé, nada se sabe,\n
ni nada sabré jamás,\n
nada han dicho los periódicos,\n
nada pude averiguar,\n
de aquella mulata de oro\n
que una vez miré al pasar,\n
moño de seda en la nuca,\n
bata de cristal,\n
niña de espalda reciente,\n
tacón de reciente andar.\n

    </string>
    <string name="s02" >
En los ojos\n
llevas un pez muerto\n
-un pez nocturno-\n
y un pájaro disecado.\n
Ha de ser por miedo\n
-el miedo a la libertad de expresión\n
que padecen los analfabetos.\n
\n\
Pero ayer te exorcizaron\n
y te dieron permiso\n
para otros menesteres\n
\n\
-gracias señores\n
buhoneros de la verdad-\n
\n\
así que ahora llevas\n
con entera libertad tu pez\n
y tu pájaro entre los ojos\n
\n\
-ya eres salvo.\n

    </string>
    <string name="s03" >
La clase media\n
se para en la esquina\n
con sus pancartas\n
fetiches\n
y pudores.\n
\n\
Propongo que le subamos el voltaje\n
a los ojos de los cuervos\n
-cada uno queme su efigie\n
en el altar familiar\n
del día lunes-.\n
\n\
La clase media\n
tiene blancos los ojos\n
y sólo mira\n
desde el ojo de la llave\n
-sus trapos limpios,\n
lavados en casa,\n
y sus zapatos brillantes\n
son sus melancólicas señales.\n
\n\
No veo que se escape\n
de tan amaestrada\n
-para ella inventaron\n
los perritos pequineses,\n
la inflación\n
y la paternidad responsable.\n

    </string>
    <string name="n01" >
Sobre la gran muralla americana\n
altivo torreón, vecino al cielo,\n
su cúspide levanta soberana,\n
a do jamás osó llevar su vuelo\n
la reina de las aves atrevida\n
que en la cuna de Júpiter anida.\n
\n\
Gigante es Almolonga entre los montes,\n
fuerte, soberbio, grande entre los grandes\n
¡Cuál domina millares de horizontes!\n
¡Cómo huella la cumbre de los Andes!\n
¡Cómo mira a su falda avasalladas,\n
de cien montes las cimas encumbradas!\n
\n\
Cuando animado el pensador profundo\n
de la sublime inspiración divina\n
quiere ver a sus pies el ancho mundo\n
y al vértice elevado se encamina,\n
¡cómo va sus ideas ensalzando\n
al par que va subiendo y va mirando!\n
\n\
Allá en su patria misma el fiero rayo\n
oye bronco tronar bajo su planta:\n
y el sol que el monte hiere de soslayo\n
y la nube que lenta se levanta,\n
y su sombra contempla, que distinta\n
cual espectro en la atmósfera se pinta.\n
\n\
Verde, risueña, alegre, la campaña\n
que mil arroyos cruzan argentinos\n
divisa, y la ciudad y la cabaña,\n
y el cerro con sus bosques y sus pinos,\n
el lago de cristal, la fértil vega\n
y el río transparente que la riega.\n
\n\
Mira a un lado el Océano poderoso\n
cuyas ondas azules va lamiendo\n
la inmóvil planta al terrenal coloso.\n
Al Izalco, por otra mira ardiendo,\n
y allá en una comarca más distante\n
el Momotombo mira fulminante.\n
\n\
Y sin saciar su vista ni su mente\n
por estrecho sendero y escarpado\n
baja de la montaña lentamente\n
el sabio a sus ideas entregado;\n
tal virtud, tal poder, tal fuerza encierra\n
¡aquel gran monumento de la tierra!\n
\n\
Se vuelve y ve de la montaña erguida\n
en la cintura atlética azulada\n
cándida zona en derredor ceñida,\n
y la sublime cúpula adornada\n
de suspendida nubecilla leve\n
deshecha y pura y blanca como nieve.\n
\n\
Y el filósofo en éxtasis admira\n
las obras portentosas de natura\n
y quiere comprenderlas y suspira\n
al ver su presunción y su locura;\n
y su saber y su razón humilla\n
ante el autor de tanta maravilla.\n

    </string>
    <string name="n02" >
Vámonos patria a caminar, yo te acompaño.\n
\n\
Yo bajaré los abismos que me digas.\n
Yo beberé tus cálices amargos.\n
Yo quedaré sin voz para que tú cantes.\n
Yo he de morir para que tú no mueras.\n
Para que emerja tu rostro flameando al horizonte\n
de cada flor que nazca de mis huesos.\n
Tiene que ser así, indiscutiblemente.\n
\n\
Yo me cansé de llevar tus lágrimas conmigo.\n
Ahora quiero caminar contigo, relampagueante.\n
Acompañarte en tu jornada, porque soy un hombre\n
del pueblo, nacido en octubre para la faz del mundo.\n
Ay, patria,\n
a los coroneles que orinan tus muros\n
tenemos que arrancarlos de raíces,\n
colgarlos en un árbol de rocío agudo,\n
violento de cóleras del pueblo.\n
Por ello pido que caminemos juntos. Siempre\n
con los campesinos agrarios\n
y los obreros sindicales,\n
con el que tenga un corazón para quererte.\n
Vámonos patria a caminar, yo te acompaño.\n

    </string>
    <string name="n03" >
Aguja de una iglesia que se eleva\n
con esa clara unción de la plegaria.\n
Árbol con golondrina necesaria.\n
Parque: almendro que músicas renueva.\n
\n\
Ansiedad de un crepúsculo que lleva\n
los tintes de una sangre temeraria.\n
Calles con rectitudes de araucaria.\n
Sudor, contra-quejidos en la gleba.\n
\n\
Heroica por la sangre de sus manes,\n
por su pecho de ardiente fumarola\n
y su raza de auténticos titanes.\n
\n\
Santa Ana es una flor en su corola\n
con pétalos de cerros y volcanes.\n
Santa Ana, para mí, se llama Lola…\n

    </string>
</resources>