<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act_superacion"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SUPERACIÓN"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:textColor="#0C7A11"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5sp"
        >

/*INICIO POEMA 1 */
        <TextView
            android:id="@+id/txt_spo1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Titulo: Agua Del Recuerdo"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/txt_auto1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Autor: Nicolás Guillén"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/img_s01"
            android:layout_width="150sp"
            android:layout_height="120sp"
            android:src="@drawable/ic_s01"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s01"
            android:textAlignment="center"
            android:textIsSelectable="true"
            />
/*INICIO POEMA 2 */
        <TextView
            android:id="@+id/txt_spo2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Titulo: Exorcismo"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/txt_auto2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Autor: José Luis Villatoro"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/img_s02"
            android:layout_width="150sp"
            android:layout_height="120sp"
            android:src="@drawable/ic_s02"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s02"
            android:textAlignment="center"
            android:textIsSelectable="true"
            />

/*INICIO POEMA 3 */
        <TextView
            android:id="@+id/txt_spo3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Titulo: El Encanto De La Clase Media"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/txt_auto3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Autor: José Luis Villatoro"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/img_s03"
            android:layout_width="150sp"
            android:layout_height="120sp"
            android:src="@drawable/ic_s03"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s03"
            android:textAlignment="center"
            android:textIsSelectable="true"
            />
    </LinearLayout>
</ScrollView>
</LinearLayout>