<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act_nacion"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PATRIA / NACIÓN"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:textColor="#122FD5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5sp"
        >
/*INICIO POEMA 1 */
        <TextView
            android:id="@+id/txt_npo1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Titulo: Volcán Del Agua"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/txt_auto1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Autor: José Batres Montúfar"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/img_n01"
            android:layout_width="150sp"
            android:layout_height="120sp"
            android:src="@drawable/ic_n01"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n01"
            android:textAlignment="center"
            android:textIsSelectable="true"
            />

/*INICIO POEMA 2 */
        <TextView
            android:id="@+id/txt_npo2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Titulo: Vámonos Patria, A Caminar"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/txt_auto2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Autor: Otto Rene Castillo"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/img_n02"
            android:layout_width="150sp"
            android:layout_height="120sp"
            android:src="@drawable/ic_n02"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n02"
            android:textAlignment="center"
            android:textIsSelectable="true"
            />

/*INICIO POEMA 3 */
        <TextView
            android:id="@+id/txt_npo3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Titulo: Retrato De La Ciudad"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/txt_auto3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Autor: Manuel José Arce"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/img_n03"
            android:layout_width="150sp"
            android:layout_height="120sp"
            android:src="@drawable/ic_n03"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n03"
            android:textAlignment="center"
            android:textIsSelectable="true"
            />

    </LinearLayout>

</ScrollView>
</LinearLayout>